components/ChartPage/Measure.module.scss
$white-lane: rgba(200, 200, 200, 0.2);
$yellow-lane: rgba(255, 250, 118, 0.2);
$green-lane: rgba(182, 249, 184, 0.2);
$blue-lane: rgba(145, 190, 245, 0.2);
$red-lane: rgba(246, 175, 176, 0.2);

.Measure {
  width: 390px;
  display: flex;
  justify-content: center;
  gap: 10px;
  border-style: solid;
  border-color: rgba(100, 100, 100, 0.8);
  border-width: 0 0 2px;
  font-family: "M PLUS 1", "Arial", sans-serif;

  .measureNumber {
    width: 80px;
    text-align: right;
    align-self: flex-end;
    margin-bottom: 3px;

    display: flex;
    flex-direction: column;

    line-height: 1;

    .timestamp {
      font-size: 1rem;
      color: rgb(160, 160, 160);
      margin-right: 2px;
    }

    .num {
      font-size: 2rem;
      display: flex;
      flex-direction: row;
      justify-content: flex-end;
      gap: 0.125rem;

      a {
        border-bottom: 2px solid #222;
        width: 1.25rem;
        height: 1.25rem;
        align-self: flex-end;
        margin-bottom: 2px;

        svg {
          vertical-align: text-top;
        }
      }
    }
  }

  .noteArea {
    position: relative;
    width: 198px;

    .pos1 {
      position: absolute;
      left: 0;
    }
    .pos2 {
      position: absolute;
      left: 24px;
    }
    .pos3 {
      position: absolute;
      left: 44px;
    }
    .pos4 {
      position: absolute;
      left: 68px;
    }
    .pos5 {
      position: absolute;
      left: 88px;
    }
    .pos6 {
      position: absolute;
      left: 112px;
    }
    .pos7 {
      position: absolute;
      left: 132px;
    }
    .pos8 {
      position: absolute;
      left: 156px;
    }
    .pos9 {
      position: absolute;
      left: 176px;
    }

    .Lane {
      height: 100%;

      &.white {
        width: 22px;
        background-color: $white-lane;
      }
      &.yellow {
        width: 18px;
        background-color: $yellow-lane;
      }
      &.green {
        width: 22px;
        background-color: $green-lane;
      }
      &.blue {
        width: 18px;
        background-color: $blue-lane;
      }
      &.red {
        width: 22px;
        background-color: $red-lane;
      }
    }

    .GuideLine {
      position: absolute;
      width: 100%;
      border-style: solid;
      border-width: 2px 0 0 0;

      &.beat {
        border-color: rgba(100, 100, 100, 0.8);
      }

      &.half {
        border-color: rgba(200, 200, 200, 0.8);
      }
    }

    .BpmEvent {
      position: absolute;
      z-index: 0;

      &.initial {
        color: rgb(60, 60, 60);

        .line {
          background: transparent;
        }
      }

      &.increase {
        color: rgb(100, 200, 100);

        .line {
          background: linear-gradient(transparent, rgba(125, 243, 129, 0.7));
        }
      }

      &.decrease {
        color: rgb(200, 100, 100);

        .line {
          background: linear-gradient(transparent, rgba(237, 126, 127, 0.7));
        }
      }

      .line {
        position: absolute;
        width: 198px;
        height: 40px;
        bottom: -4px;
      }

      .bpm {
        position: absolute;
        width: max-content;
        left: 206px;
        bottom: 0;
        line-height: 1;
        font-size: 0.875rem;
        font-weight: bold;
        background: rgba(255, 255, 255, 0.7);
        padding-top: 8px;
        letter-spacing: -0.5px;

        .arrow {
          margin-right: 2px;
        }
      }
    }

    .Note, .HoldNote {
      z-index: 1;
    }

    .startBpm {
      position: absolute;
      width: max-content;
      left: 206px;
      bottom: 3px;
      line-height: 1;
      font-size: 0.875rem;
      font-weight: bold;
      opacity: 0.3;
    }
  }

  .empty {
    width: 80px;
  }
}

